--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     environment {
     registry = '676334272140.dkr.ecr.us-east-1.amazonaws.com/devop_repository'
-    registryCredential = 'jenkins-ecr'
+    registryCredential = 'jenkins-ecr1'
     dockerimage = ''
   }
     stages {
@@ -14,15 +14,21 @@ pipeline {
                 git branch: 'main', url: 'https://github.com/geovie19/devops-repo.git'
             }
         }
-        stage('Code Build') {
+    stage('Build Image') {
             steps {
-                sh 'mvn clean package'
+                script{
+                    dockerImage = docker.build registry + ":$BUILD_NUMBER"
+                } 
             }
         }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
+        stage('Deploy image') {
+            steps{
+                script{ 
+                    docker.withRegistry("https://"+registry,"ecr:us-east-1:"+registryCredential) {
+                        dockerImage.push()
+                    }
                 }
-       }    
-    }  
-}    
+            }
+        }  
+    }
+}
