--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     environment {
     registry = '676334272140.dkr.ecr.us-east-1.amazonaws.com/devop_repository19'
-    registryCredential = 'devop_repository'
+    registryCredential = 'jenkins-ecr1'
     dockerimage = ''
     }
     stages {
